hphp/test/zend/bad/ext/hash/tests/mhash_002.php.expectregex
MD5 . 16
MD4 . 16
SHA1 . 20
SHA256 . 32
HAVAL256 . 32
HAVAL192 . 24
HAVAL224 . 28
HAVAL160 . 20
HAVAL128 . 16
RIPEMD160 . 20
GOST . 32
TIGER . 24
TIGER160 . 20
TIGER128 . 16
CRC32 . 4
CRC32B . 4
ADLER32 . 4
NA_XYZ . 0